# Augur

./: .gitignore  Cargo.toml  README.md
src/: command.rs  db.rs  error.rs  main.rs  royalroad.rs  update.rs
src/royalroad/: add.rs  check.rs  commands.rs  mod.rs  remove.rs  royalstruct.rs
