[package]
name = "augur"
version = "0.1.0"
authors = ["WeAreAngus <52379007+hackermanangus@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-cache-inmemory = "0.2"
twilight-gateway = "0.2"
twilight-http = "0.2"
twilight-model = "0.2"
tokio = {version = "0.2.22", features = ["macros"]}
dotenv = "0.15.0"
reqwest = "0.10.8"
regex = "1.4.2"
sqlx = { version = "0.4.2", features = ["runtime-tokio-native-tls", "sqlite"]}
uuid = { version = "0.8", features = ["v4"] }